--- a/README
+++ b/README
@@ -18,3 +18,5 @@ déplacement case par case, tir sans contre attaque. ATK de l'attaquant moins la
 PV du défenseur 
 
 Tout cela est temporaire et brouillon et pourra être modifié.
+
+Le langage Java est utilisé.
